# VoiceControl

./: .gitignore  AGENTS.md  AGENTS_CN.md  README.md  README_EN.md  config.json  pyproject.toml  requirements.txt
src/voicecontrol/: __init__.py  main.py  tray_app.py
src/voicecontrol/audio/: device_manager.py  recorder.py
src/voicecontrol/config/: __init__.py  manager.py  settings.py
src/voicecontrol/control/: __init__.py  commands.py
src/voicecontrol/diagnostics/: __init__.py  executor_send.py  logs.py  microphone.py  sensevoice_resource.py  store.py  stt_model_compare.py  vad.py  wake_word.py
src/voicecontrol/events/: __init__.py  status.py  status_snapshot.py
src/voicecontrol/executor/: __init__.py  app_driver.py  chatgpt_driver.py  codex_driver.py  cursor_driver.py  router.py  trae_driver.py  window_utils.py
src/voicecontrol/history/: __init__.py  resend.py  store.py
tests/: test_audio_recorder.py  test_chatgpt_driver.py  test_codex_driver_launch.py  test_command_history.py  test_config_defaults.py  test_control_commands.py  test_cursor_driver.py  test_desktop_pet.py  test_diagnostics.py  test_executor_router.py  test_hotkeys.py  test_main_manual_stop.py  test_manual_recording_stop.py  test_no_mojibake.py  test_optional_dependencies.py  test_pipeline_status_events.py  test_resend_last_command.py  test_runtime_status_snapshot.py  test_sensevoice_engine.py  test_settings_window_navigation.py  test_status_events.py  test_stt_engine.py  test_stt_factory.py  test_trae_driver.py  test_tray_app.py  test_tray_recording_controls.py  test_tts_speaker.py  test_tts_status_speech.py  test_wake_word_models.py  test_whisper_engine.py  test_window_utils.py
(+38 files in other folders)
